--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,9 +6,9 @@
 <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>featen . happy coding</title>
-<meta name="description" content="featen.com">
-<meta name="author" content="He Jian Jun, jason at featen.com">
+<title>meicard . 卡片式设计</title>
+<meta name="description" content="meicard.com card-base design, 卡片, 卡片式设计">
+<meta name="author" content="He Jian Jun, jason at meicard.com">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <link rel="stylesheet" href="/sparrow/css/default.css">
@@ -35,7 +35,7 @@
 		<div class="row">
 			<div class="twelve columns">
 				<div class="logo">
-					<a data-ng-href="#!/"><img alt="" src="/images/featen.png"></a>
+					<a data-ng-href="#!/"><font size="32" color="white">meicard</font></a>
 				</div>
 
 				<nav id="nav-wrap">
@@ -43,6 +43,9 @@
 	            	<a class="mobile-btn" href="#" target="_self" title="Hide navigation">Hide navigation</a>
 
 					<ul id="nav" class="nav" data-ng-controller="UsersCtrl" data-ng-init="init()">
+                        <li data-ng-hide="global.isemployee"><a data-ng-href="#!/blog">BLOG</a>
+                        <li data-ng-hide="global.isemployee"><a data-ng-href="#!/dict">英汉词典</a>
+                        </li>
                         <li data-ng-show="global.isemployee"><span><a data-ng-href="#!/customers" >Customers</a></span>
 	                        <ul>
 	                        	<li><a data-ng-href="#!/addcustomer">Add Customer</a></li>
@@ -107,7 +110,7 @@
             </ul>
 
             <ul class="copyright">
-               <li>Copyright &copy; 2014 Featen.    Template by <a href="http://www.styleshout.com">Styleshout</a></li>
+               <li>Copyright &copy; 2014 meicard.    Template by <a href="http://www.styleshout.com">Styleshout</a></li>
             </ul>
          </div>
          <div id="go-top" style="display: block;"><a title="Back to Top" href="#">Go To Top</a></div>
@@ -152,6 +155,7 @@
 	<script type="text/javascript" src="/js/services/enquire.js"></script>
 	<script type="text/javascript" src="/js/services/report.js"></script>
 	<script type="text/javascript" src="/js/services/deal.js"></script>
+    <script type="text/javascript" src="/js/services/dict.js"></script>
 
 	<script type="text/javascript" src="/js/controllers/index.js"></script>
 	<script type="text/javascript" src="/js/controllers/alerts.js"></script>
@@ -163,6 +167,7 @@
 	<script type="text/javascript" src="/js/controllers/enquire.js"></script>
 	<script type="text/javascript" src="/js/controllers/report.js"></script>
 	<script type="text/javascript" src="/js/controllers/deal.js"></script>
+    <script type="text/javascript" src="/js/controllers/dict.js"></script>
 	<script type="text/javascript" src="/js/controllers/reviewboard.js"></script>
 
 
