Add agent module.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,9 +19,11 @@
 
 <script type="text/javascript" src="/sparrow/js/modernizr.js"></script>
 <script type="text/javascript" src="/lib/angular-1.2.1.js"></script>
-<script type="text/javascript" src="/lib/angular-cookies-1.2.1.js"></script>
-<script type="text/javascript" src="/lib/angular-resource-1.2.1.js"></script>
 <script type="text/javascript" src="/lib/angular-route-1.2.1.js"></script>
+<script type="text/javascript" src="/lib/angular-resource-1.2.1.js"></script>
+<script type="text/javascript" src="/lib/angular-cookies-1.2.1.js"></script>
+
+
 
 <link rel="shortcut icon" href="favicon.png">
 <style>
@@ -156,6 +158,7 @@
 	<script type="text/javascript" src="/js/services/report.js"></script>
 	<script type="text/javascript" src="/js/services/deal.js"></script>
     <script type="text/javascript" src="/js/services/dict.js"></script>
+    <script type="text/javascript" src="/js/services/agent.js"></script>
 
 	<script type="text/javascript" src="/js/controllers/index.js"></script>
 	<script type="text/javascript" src="/js/controllers/alerts.js"></script>
@@ -168,6 +171,7 @@
 	<script type="text/javascript" src="/js/controllers/report.js"></script>
 	<script type="text/javascript" src="/js/controllers/deal.js"></script>
     <script type="text/javascript" src="/js/controllers/dict.js"></script>
+    <script type="text/javascript" src="/js/controllers/agent.js"></script>
 	<script type="text/javascript" src="/js/controllers/reviewboard.js"></script>
 
 
