--- a/webapp/index.html
+++ b/webapp/index.html
@@ -36,7 +36,7 @@
 		<div class="row">
 			<div class="twelve columns">
 				<div class="logo">
-					<a data-ng-href="#!/"><font size="32" color="white">featen</font></a>
+					<a data-ng-href="#/"><font size="32" color="white">featen</font></a>
 				</div>
 			</div>
 		</div>
