--- a/webapp/admin/index.html
+++ b/webapp/admin/index.html
@@ -14,14 +14,46 @@
 <link rel="stylesheet" href="/sparrow/css/default.css">
 <link rel="stylesheet" href="/sparrow/css/layout.css">
 <link rel="stylesheet" href="/sparrow/css/media-queries.css">
-<link rel="stylesheet" href="/css/nv.d3.css">
 <link rel="stylesheet" href="/sparrow/css/ags.css">
 
 <script type="text/javascript" src="/sparrow/js/modernizr.js"></script>
 <script type="text/javascript" src="/lib/angular-1.2.1.js"></script>
 <script type="text/javascript" src="/lib/angular-route-1.2.1.js"></script>
-<script type="text/javascript" src="/lib/angular-resource-1.2.1.js"></script>
-<script type="text/javascript" src="/lib/angular-cookies-1.2.1.js"></script>
+
+	<!--
+	<script type="text/javascript" src="/lib/jquery-2.0.3.js"></script>
+	<script	src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+    -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="/sparrow/js/jquery-migrate-1.2.1.min.js"></script>
+
+	<!-- template js -->
+	<script src="/sparrow/js/jquery.flexslider.js"></script>
+	<script src="/sparrow/js/doubletaptogo.js"></script>
+	<script src="/sparrow/js/init.js"></script>
+
+	<!-- jquery data table 
+	<script src="/lib/jquery.dataTables.js"></script>
+	<script src="/lib/jquery.dataTables.bootstrap.js"></script>
+    -->
+	<!-- base64 -->
+	<script src="/lib/base64.js"></script>
+
+	<!-- Markdown  -->
+	<script defer type="text/javascript" src="/lib/marked.js"></script>
+
+	<!-- APP JS -->
+
+	<script type="text/javascript" src="/js/admin/app.js"></script>
+	<script type="text/javascript" src="/js/admin/config.js"></script>
+	<script type="text/javascript" src="/js/utils.js"></script>
+	<script type="text/javascript" src="/js/admin/user.js"></script>
+	<script type="text/javascript" src="/js/admin/article.js"></script>
+	<script type="text/javascript" src="/js/admin/share.js"></script>
+	<script type="text/javascript" src="/js/admin/product.js"></script>
+
+
+	<script type="text/javascript" src="/js/init.js"></script>
 
 
 
@@ -44,8 +76,8 @@
 					<a class="mobile-btn" href="#nav-wrap" target="_self" title="Show navigation">Show navigation</a>
 	            	<a class="mobile-btn" href="#" target="_self" title="Hide navigation">Hide navigation</a>
 
-					<ul id="nav" class="nav" data-ng-controller="UsersCtrl" data-ng-init="init()">
-                        <li data-ng-show="global.authenticated"><span><a data-ng-href="#/products">Products</a></span>
+					<ul id="nav" class="nav" data-ng-controller="UsersCtrl" data-ng-init="getCurrUser()">
+                        <li data-ng-hide="!global.authenticated"><span><a data-ng-href="#/products">Products</a></span>
                         	<ul>
                         		<li><a data-ng-href="#/addproduct">Add Product</a></li>
                         	</ul>
@@ -68,7 +100,7 @@
 
 	<div data-ng-view></div>
 
-	<div class="alert-container alert-bottom-right" data-ng-controller="AlertsCtrl">
+	<div class="alert-container alert-bottom-right" data-ng-controller="AlertController">
 		<div data-ng-repeat="alert in alerts" class="alert"
 			data-ng-class="{'alert-warning': alert.type == 'warning',
 	                               'alert-success': alert.type == 'success',
@@ -106,54 +138,5 @@
 
 	<a href="https://github.com/featen/ags"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 
-	<!--
-	<script type="text/javascript" src="/lib/jquery-2.0.3.js"></script>
-	<script	src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
-    -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="/sparrow/js/jquery-1.10.2.min.js"><\/script>')</script>
-	<script type="text/javascript" src="/sparrow/js/jquery-migrate-1.2.1.min.js"></script>
-
-	<!-- template js -->
-	<script src="/sparrow/js/jquery.flexslider.js"></script>
-	<script src="/sparrow/js/doubletaptogo.js"></script>
-	<script src="/sparrow/js/init.js"></script>
-
-	<!-- jquery data table 
-	<script src="/lib/jquery.dataTables.js"></script>
-	<script src="/lib/jquery.dataTables.bootstrap.js"></script>
-    -->
-	<!-- base64 -->
-	<script src="/lib/base64.js"></script>
-
-	<!-- nvd3 -->
-	<script defer type="text/javascript" src="/lib/nvd3/d3.v3.js"></script>
-
-	<!-- APP JS -->
-	<script type="text/javascript" src="/js/app.js"></script>
-	<script type="text/javascript" src="/js/filters.js"></script>
-	<script type="text/javascript" src="/js/directives.js"></script>
-	<script type="text/javascript" src="/js/admin_config.js"></script>
-
-	<script type="text/javascript" src="/js/services/global.js"></script>
-	<script type="text/javascript" src="/js/services/alerts.js"></script>
-	<script type="text/javascript" src="/js/services/user.js"></script>
-	<script type="text/javascript" src="/js/services/article.js"></script>
-	<script type="text/javascript" src="/js/services/share.js"></script>
-	<script type="text/javascript" src="/js/services/product.js"></script>
-	<script type="text/javascript" src="/js/services/report.js"></script>
-
-	<script type="text/javascript" src="/js/controllers/index.js"></script>
-	<script type="text/javascript" src="/js/controllers/alerts.js"></script>
-	<script type="text/javascript" src="/js/controllers/user.js"></script>
-	<script type="text/javascript" src="/js/controllers/article.js"></script>
-	<script type="text/javascript" src="/js/controllers/share.js"></script>
-	<script type="text/javascript" src="/js/controllers/product.js"></script>
-
-
-	<script type="text/javascript" src="/js/init.js"></script>
-
-	<!-- Markdown  -->
-	<script defer type="text/javascript" src="/lib/marked.js"></script>
 </body>
 </html>
