--- a/webapp/blog.html
+++ b/webapp/blog.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/sparrow/css/default.css">
 <link rel="stylesheet" href="/sparrow/css/layout.css">
 <link rel="stylesheet" href="/sparrow/css/media-queries.css">
-<link rel="stylesheet" href="/sparrow/css/ags.css">
+<link rel="stylesheet" href="/sparrow/css/gas.css">
 
 
 <link rel="shortcut icon" href="favicon.png">
@@ -70,7 +70,7 @@
       </div>
 	</footer>
 
-	<a href="https://github.com/featen/ags"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+	<a href="https://github.com/featen/gas"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 
 <script type="text/javascript" src="/sparrow/js/modernizr.js"></script>
 <script type="text/javascript" src="/lib/angular-1.2.1.js"></script>
